--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -42,13 +43,13 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20",
-    "expo-sqlite": "~14.0.6"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
