--- a/app.json
+++ b/app.json
@@ -1,26 +1,28 @@
 {
   "expo": {
-    "name": "sake-log-native",
-    "slug": "sake-log",
-    "version": "1.0.0",
+    "name": "酒レコ",
+    "slug": "sake-rec",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "sake-log",
+    "scheme": "sake-rec",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.shuuuun.sakelog"
+      "bundleIdentifier": "com.shun-kimura.sake-rec",
+      "buildNumber": "6"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.shun_kimura.sake_rec"
     },
     "web": {
       "bundler": "metro",
@@ -28,8 +30,27 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "@sentry/react-native/expo",
+        {
+          "organization": "personal-4ai",
+          "project": "sake-rec",
+          "url": "https://sentry.io/"
+        }
+      ]
     ],
+    "hooks": {
+      "postPublish": [
+        {
+          "file": "sentry-expo/upload-sourcemaps",
+          "config": {
+            "organization": "personal-4ai",
+            "project": "sake-rec"
+          }
+        }
+      ]
+    },
     "experiments": {
       "typedRoutes": true
     },
@@ -38,9 +59,15 @@
         "origin": false
       },
       "eas": {
-        "projectId": "9ce53677-ed7f-49d7-8db9-f368b4a1b544"
+        "projectId": "a4f88ea9-96f0-4843-9395-0da3c0bb414a"
       }
     },
-    "owner": "shuuuun"
+    "owner": "shuuuun",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/a4f88ea9-96f0-4843-9395-0da3c0bb414a"
+    }
   }
 }
