--- a/package.json
+++ b/package.json
@@ -1,41 +1,51 @@
 {
-  "name": "sake-log-native",
+  "name": "sake-rec",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build": "expo build"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.21",
+    "@sentry/react-native": "~5.24.3",
+    "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.33.0",
+    "expo": "~51.0.34",
+    "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
-    "expo-splash-screen": "~0.27.5",
-    "expo-sqlite": "~14.0.6",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.6",
+    "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.25",
     "expo-web-browser": "~13.0.3",
+    "nativewind": "^2.0.11",
     "normalize-css-color": "^1.0.2",
+    "promise": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-bottom-sheet": "^1.0.3",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-quick-sqlite": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.8",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.1.0",
@@ -47,12 +57,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/prebuild-config": "~7.0.0",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "@types/react-native-sqlite-storage": "^6.0.5",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-kit": "^0.24.0",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
   "private": true
