--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "build": "expo build"
+    "build": "expo build",
+    "knip": "knip"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.18.11",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
-    "@sentry/react-native": "~5.24.3",
+    "@sentry/react-native": "^5.33.1",
+    "babel-plugin-inline-import": "^3.0.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
-    "expo": "~51.0.34",
+    "expo": "^51.0.36",
     "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -31,8 +34,10 @@
     "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.25",
+    "expo-updates": "~0.25.26",
     "expo-web-browser": "~13.0.3",
+    "metro": "^0.80.12",
+    "metro-config": "^0.80.12",
     "nativewind": "^2.0.11",
     "normalize-css-color": "^1.0.2",
     "promise": "^8.3.0",
@@ -59,14 +64,16 @@
     "@babel/core": "^7.20.0",
     "@expo/config-plugins": "~8.0.0",
     "@expo/prebuild-config": "~7.0.0",
+    "@types/node": "^22.7.5",
     "@types/react": "~18.2.45",
     "@types/react-native-sqlite-storage": "^6.0.5",
-    "babel-plugin-inline-import": "^3.0.0",
+    "babel-preset-expo": "^11.0.14",
     "drizzle-kit": "^0.24.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.4",
+    "knip": "^5.33.1",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
   },
   "private": true
