Fix the bug that prevented drink card reordering from becoming permanent.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "useDefineForClassFields": false,
     "emitDecoratorMetadata": true
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "declaretions.d.ts"]
 }
