--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "酒レコ",
     "slug": "sake-rec",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "sake-rec",
@@ -15,7 +15,8 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.shun-kimura.sake-rec",
-      "buildNumber": "11"
+      "buildNumber": "12",
+      "deploymentTarget": "12.0"
     },
     "android": {
       "adaptiveIcon": {
