--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "recoil": "^0.7.7",
@@ -72,6 +73,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.4",
     "knip": "^5.33.1",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
