--- a/package.json
+++ b/package.json
@@ -15,28 +15,28 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.18.11",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/metro-config": "~0.18.11",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
-    "@sentry/react-native": "^5.33.1",
+    "@sentry/react-native": "~5.24.3",
     "babel-plugin-inline-import": "^3.0.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
     "expo": "^51.0.36",
     "expo-drizzle-studio-plugin": "^0.0.2",
-    "expo-font": "~12.0.9",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.6",
-    "expo-sqlite": "^14.0.6",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.26",
+    "expo-updates": "~0.25.27",
     "expo-web-browser": "~13.0.3",
-    "metro": "^0.80.12",
+    "metro": "~0.80.8",
     "metro-config": "^0.80.12",
     "nativewind": "^2.0.11",
     "normalize-css-color": "^1.0.2",
@@ -53,7 +53,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "recoil": "^0.7.7",
@@ -62,18 +62,17 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@expo/config-plugins": "~8.0.0",
     "@expo/prebuild-config": "~7.0.0",
     "@types/node": "^22.7.5",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-native-sqlite-storage": "^6.0.5",
-    "babel-preset-expo": "^11.0.14",
+    "babel-preset-expo": "~11.0.0",
     "drizzle-kit": "^0.24.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.4",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "knip": "^5.33.1",
-    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
